# Normal_Topo_Poc

./: .gitignore  Makefile  SPEC.md  pyproject.toml
configs/: pipeline.example.yaml
docs/: AGENT_PLAYBOOK.md  ARTIFACT_PROTOCOL.md  CODEX_GUARDRAILS.md  CODEX_START_HERE.md  PROJECT_BRIEF.md  WORKSPACE_SETUP.md
modules/t01_intersection_verification/: AGENTS.md  INTERFACE_CONTRACT.md  SKILL.md
modules/t02_segment_extraction/: AGENTS.md  INTERFACE_CONTRACT.md  SKILL.md
modules/t03_segment_construction/: AGENTS.md  INTERFACE_CONTRACT.md  SKILL.md
modules/t04_intersection_modeling/: AGENTS.md  INTERFACE_CONTRACT.md  INTERNAL_WSL_USAGE.md  PHASE11_RC.md  PHASE2_USAGE.md  PHASE7_BASELINE.md  REVIEW_USAGE.md  SKILL.md  T04_BASELINE_MANIFEST.json
scripts/: pull_normal_topo_from_github.sh  run_smoke.sh  run_t04_sh_crop_inputs.sh  run_t04_sh_manual_mode.sh  run_t04_sh_module.sh
src/normal_topo_poc/: cli.py
src/normal_topo_poc/modules/t01_intersection_verification/: __init__.py
src/normal_topo_poc/protocol/: text_lint.py  text_qc_bundle.py
src/normal_topo_poc/utils/: size_guard.py
tests/: conftest.py  test_smoke_minimal.py  test_text_qc_bundle.py
tests/fixtures/t04_intersection_modeling/: manual_service_profile_only.json  manual_service_with_pair.json
tests/t04_intersection_modeling/: test_t04_minimal_pipeline.py  test_t04_phase10_roundtrip_and_diff.py  test_t04_phase11_review_cycle_and_baseline.py  test_t04_phase12_dataset_wsl.py  test_t04_phase13_input_cropper.py  test_t04_phase8_baseline_and_multipatch.py  test_t04_phase9_manual_support.py
(+39 files in other folders)
