[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "normal-topo-poc"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["shapely>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
markers = [
  "smoke: minimal repository-level checks that only read docs or write under outputs/_work",
]
